force-app/main/default/objects/Requirements__c/Requirements__c.object-meta.xml
<CustomObject>
    <description>Once User Stories are established, what are the next steps? Requirements, both functional and technical, are captured in this object, and provide the next steps, after User Stories are captured, and enable the progression of defining what is necessary to enable success.</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Req. ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>