force-app/main/default/objects/Requirements__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cases (Engineering)</fullName>
            </value>
            <value>
                <fullName>Cases (Support)</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Forecasts</fullName>
            </value>
            <value>
                <fullName>Knowledge Base</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Live Agent</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Quoting</fullName>
            </value>
            <value>
                <fullName>Reporting &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Surveying</fullName>
            </value>
            <value>
                <fullName>Time &amp; Expense</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Data Deduplication</fullName>
            </value>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>