force-app/main/default/objects/Requirements__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary owner pushing for this requirement.</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>