force-app/main/default/objects/Requirements__c/fields/Development_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Status__c</fullName>
    <inlineHelpText>Has this requirement been implemented, ready for testing, a work in progress, or pending?</inlineHelpText>
    <label>Development Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed / Implemented</fullName>
            </value>
            <value>
                <fullName>Completed - Code</fullName>
            </value>
            <value>
                <fullName>Completed - Config</fullName>
            </value>
            <value>
                <fullName>Completed - Data</fullName>
            </value>
            <value>
                <fullName>In Progress - Code</fullName>
            </value>
            <value>
                <fullName>In Progress - Config</fullName>
            </value>
            <value>
                <fullName>In Progress - Data</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Pending - Code</fullName>
            </value>
            <value>
                <fullName>Pending - Config</fullName>
            </value>
            <value>
                <fullName>Pending - Data</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>