force-app/main/default/objects/Requirements__c/fields/Req_Identified_During__c.field-meta.xml
<CustomField>
    <fullName>Req_Identified_During__c</fullName>
    <label>Req. Identified During</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Kickoff</fullName>
            </value>
            <value>
                <fullName>Kickoff</fullName>
            </value>
            <value>
                <fullName>Working Model</fullName>
            </value>
            <value>
                <fullName>Pre-UAT1</fullName>
            </value>
            <value>
                <fullName>UAT1</fullName>
            </value>
            <value>
                <fullName>Pre UAT2</fullName>
            </value>
            <value>
                <fullName>UAT2</fullName>
            </value>
            <value>
                <fullName>Pre UAT3</fullName>
            </value>
            <value>
                <fullName>UAT3</fullName>
            </value>
            <value>
                <fullName>Pre-Go-Live</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Post-Go-Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>