force-app/main/default/objects/Requirements__c/fields/Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Status__c</fullName>
    <inlineHelpText>Are the specifics of this requirement finalized, or still in progress?</inlineHelpText>
    <label>Requirement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>