force-app/main/default/objects/Requirements__c/listViews/All_Requirements.listView-meta.xml
<ListView>
    <fullName>All_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Track__c</columns>
    <columns>Area__c</columns>
    <columns>Requirement_Status__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ForceDev_SB_SF_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requirements</label>
    <language>en_US</language>
</ListView>