force-app/main/default/objects/Requirements__c/listViews/By_Req_Id.listView-meta.xml
<ListView>
    <fullName>By_Req_Id</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>ForceDev_SB_SF_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>REQ-1156</value>
    </filters>
    <label>By Req Id</label>
    <language>en_US</language>
</ListView>