force-app/main/default/objects/Requirements__c/listViews/Executive_Requirements.listView-meta.xml
<ListView>
    <fullName>Executive_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Title__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Requirement_Status__c</columns>
    <columns>Approved_Status__c</columns>
    <columns>Development_Status__c</columns>
    <columns>Origin__c</columns>
    <columns>Req_Identified_During__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>equals</operation>
        <value>Executive</value>
    </filters>
    <label>Executive Requirements</label>
    <language>en_US</language>
</ListView>