force-app/main/default/objects/Requirements__c/listViews/Legal_Requirements.listView-meta.xml
<ListView>
    <fullName>Legal_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Title__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Requirement_Status__c</columns>
    <columns>Approved_Status__c</columns>
    <columns>Development_Status__c</columns>
    <columns>Origin__c</columns>
    <columns>Req_Identified_During__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>equals</operation>
        <value>Legal</value>
    </filters>
    <label>Legal Requirements</label>
    <language>en_US</language>
</ListView>