force-app/main/default/objects/Requirements__c/listViews/Sales_Requirements_Curt.listView-meta.xml
<ListView>
    <fullName>Sales_Requirements_Curt</fullName>
    <columns>NAME</columns>
    <columns>Track__c</columns>
    <columns>Area__c</columns>
    <columns>Title__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Requirement_Status__c</columns>
    <columns>Approved_Status__c</columns>
    <columns>Development_Status__c</columns>
    <columns>Origin__c</columns>
    <columns>Req_Identified_During__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>contains</operation>
        <value>Sales,cpq</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>1130,1131,1132,0847,1124,0586,0919,0943</value>
    </filters>
    <label>Sales Requirements--Curt</label>
    <language>en_US</language>
</ListView>